Tidying and linting pass